Fix extra margin for first and last paragraphs in blockquotes

--- a/input/scss/_global.scss
+++ b/input/scss/_global.scss
@@ -37,6 +37,9 @@ blockquote {
   padding: 1rem 1rem 1rem 1.25rem;
   margin-left: 2rem;
   border-left: 0.25rem dashed $gray-800;
+
+  & > :first-child { margin-top: 0; }
+  & > :last-child { margin-bottom: 0; }
 }
 
 .section-heading {
